# python-in-geophysics-course

./: .pre-commit-config.yaml  README.md  pyproject.toml
course/homework/: 2_homework.ipynb  3_homework.ipynb  4_homework.ipynb  5_homework.ipynb
course/lessons/: 2_lesson.ipynb  3_lesson.ipynb  4_lesson.ipynb  5_lesson.ipynb  5_lessson_proccess_example.py
module-1/homework/: 1_homework.ipynb
module-1/lessons/: 1_lesson.ipynb
tests/: example.py  test_example.py
