[tool.poetry]
name = "python-in-geophysics-course"
version = "0.1.0"
description = ""
authors = ["Nikolay Arkhipov <cherrykolya@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
isort = "^5.12.0"
ruff = "^0.0.282"
black = "^23.7.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
